# laboratorios

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml
lab1/: Lab1_Preprocesamiento.ipynb
lab2/: Lab2_Motor_de_busqueda.ipynb  corpus_procesado.json
lab3/: Lab3_BM25_y_Evaluacion.ipynb
lab4/: Lab4_KMeans_Clustering.ipynb
lab5/: Lab5_Embeddings_Busqueda_Semantica.ipynb
lab6/: Lab6_FineTuning_BERT.ipynb
