[project]
name = "entorno-pruebas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "fasttext-wheel>=0.9.2",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "seqeval>=1.2.2",
    "spacy>=3.8.14",
    "transformers>=5.12.1",
]
